# mignosaurus

./: .gitignore  Cargo.toml  LICENSE  README.md  gl.js  index.html
asset/: 0.raw  1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  7.raw  8.raw  9.raw  convert.py  path4559.raw  path4559.tab  path5115.raw  path5115_1.raw  path5115_2.raw  path5139.raw  path5152.raw  path5175.raw  path5176.raw  path5733.raw  path5746.raw  title.raw  tittle.raw  touche.raw
src/: config.rs  game.rs  main.rs  render.rs
src/asset/: cloud.rs  dino_jump.rs  dino_run.rs  dino_run_1.rs  dino_run_2.rs  ground.rs  mod.rs  num0.rs  num1.rs  num2.rs  num3.rs  num4.rs  num5.rs  num6.rs  num7.rs  num8.rs  num9.rs  rocket.rs  title.rs  touche.rs  virus_1.rs  virus_2.rs
src/component/: background.rs  dino.rs  ihm.rs  mod.rs  physics.rs  score.rs  virus.rs
src/system/: background.rs  dino.rs  ihm.rs  mod.rs  offscreen.rs  physics.rs  render.rs  rules.rs  score.rs  sprite.rs  virus.rs
