[package]
name = "mignosaurus"
version = "0.1.0"
authors = ["Sylvain Peyrefitte <citronneur@gmail.com>"]
description = "A Basic Game in Rust"
repository = "https://github.com/citronneur/run"
readme = "README.md"
categories = ["game"]
license = "MIT"

[dependencies]
miniquad = "0.2.54"
specs = { version = "0.16.1", default-features = false, features = ["specs-derive"] }
blit = "0.5.12"
vek = "0.10.2"
anyhow = "1.0.28"
lazy_static = "1.4.0"
rayon = { version = "1.3.0" }
rotsprite = "0.1.3"

